# Operating-Systems-Programs

./: Bankers_Algo.c  CMakeLists.txt  FCFS.c  FIFO_Page_Replacement.c  Fork(asc-desc).c  IPC_2Pipes.c  LRU_Page_Replacement.c  OrphanProcess.c  SRTF.c  Semaphore.c  ZombieProcess.c
